fixed the OUR-EXPERIENCE- show-case-img overlapping issue

--- a/styles.css
+++ b/styles.css
@@ -387,9 +387,10 @@ padding-top: 1rem;
 }
 
 .our-experience .show-case-image-container{
-    margin-top: -20.2rem;
+    /* margin-top: -15rem; */
 }
 .show-img{
+    margin-top: -10rem;
     position: relative;
     top: 1.4rem;
     left: 1rem;
@@ -400,6 +401,6 @@ padding-top: 1rem;
 .our-experience .show-case-image-container::after{
     content: "";
     background: rgb(247, 186, 197);
-    padding: 20rem 20rem 0 0rem;
+    padding: 18rem 18rem 0 0rem;
     border-radius: 50%;
 }
